# crud-PAT

./: app.py  modules.py  pyproject.toml
src/: controller.py  models.py
views/: addForm.html  base.html  index.html
