[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["bagussr <bagusssyamsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
sqlalchemy = "^1.4.43"
psycopg2 = "^2.9.5"
jinja2 = "^3.1.2"
uvicorn = "^0.19.0"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
